feat: add cards styles for each category

--- a/english-for-kids/index.html
+++ b/english-for-kids/index.html
@@ -44,7 +44,17 @@
 
         <main class="main">
 
-            
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src="./assets/images/1.jpg" alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img src="" alt="">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/images/1.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
             
 
         </main>
