feat: add arrows img to category card

--- a/english-for-kids/index.html
+++ b/english-for-kids/index.html
@@ -46,15 +46,93 @@
 
             <div class="card">
                 <div class="card__front">
-                    <img class="card__front__img" src="./assets/images/1.jpg" alt="img">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
                     <p class="card__front__title">dog</p>
-                    <img src="" alt="">
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
                 </div>
                 <div class="card__back">
-                    <img class="card__back__img" src="./assets/images/1.jpg" alt="img">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
                     <p class="card__back__title">собака</p>
                 </div>
             </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__front">
+                    <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
+                    <p class="card__front__title">dog</p>
+                    <img class="card__front__arrows" src="./assets/img/arrows.png" alt="arrows">
+                </div>
+                <div class="card__back">
+                    <img class="card__back__img" src="./assets/img/big.jpg" alt="img">
+                    <p class="card__back__title">собака</p>
+                </div>
+            </div>
+            
             
 
         </main>
@@ -65,7 +143,7 @@
         <div class="cards"></div>
 
         <!-- <a href="#" class="card-main">
-            <img class="card-main__img" src="./assets/images/1.jpg" alt="img">
+            <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
                Action (set A)
         </a> -->
 
