feat: add responsive layout

--- a/english-for-kids/index.html
+++ b/english-for-kids/index.html
@@ -48,6 +48,35 @@
                 <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
                    Action (set A)
             </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            <a href="#" class="card-main">
+                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
+                   Action (set A)
+            </a>
+            
 
         </main>
 
