feat: add Card class and add render function for Categories

--- a/english-for-kids/index.html
+++ b/english-for-kids/index.html
@@ -44,38 +44,6 @@
         </header>
 
         <main class="main">
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
-            <a href="#" class="card-main">
-                <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-                   Action (set A)
-            </a>
             
 
         </main>
@@ -93,14 +61,14 @@
 
         <!-- <a href="#" class="card-main">
             <img class="card-main__img" src="./assets/img/big.jpg" alt="img">
-               Action (set A)
+            <p class="card-main__title">Action (set A)</p>
         </a> -->
 
 
 
         <!-- EXAMPLE OF CATEGORY CARD -->
 
-        <!-- <div class="card">
+            <!-- <div class="card">
                 <div class="card__front">
                     <img class="card__front__img" src='./assets/img/big.jpg' alt="img">
                     <p class="card__front__title">dog</p>
