feat: add navbar handler for change catagories

--- a/english-for-kids/index.html
+++ b/english-for-kids/index.html
@@ -21,15 +21,15 @@
 
                     <nav class="navbar">
                         <ul class="navbar__list">
-                            <li class="navbar__item"><a href="#" class="navbar__link">Main Page</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Action (set A)</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Action (set B)</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Action (set C)</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Adjective</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Animal (set A)</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Animal (set B)</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Clothes</a></li>
-                            <li class="navbar__item"><a href="#" class="navbar__link">Emotions</a></li>
+                            <li class="navbar__item"><a href="#MainPage" class="navbar__link">Main Page</a></li>
+                            <li class="navbar__item"><a href="#Action (set A)" class="navbar__link">Action (set A)</a></li>
+                            <li class="navbar__item"><a href="#Action (set B)" class="navbar__link">Action (set B)</a></li>
+                            <li class="navbar__item"><a href="#Action (set C)" class="navbar__link">Action (set C)</a></li>
+                            <li class="navbar__item"><a href="#Adjective" class="navbar__link">Adjective</a></li>
+                            <li class="navbar__item"><a href="#Animal (set A)" class="navbar__link">Animal (set A)</a></li>
+                            <li class="navbar__item"><a href="#Animal (set B)" class="navbar__link">Animal (set B)</a></li>
+                            <li class="navbar__item"><a href="#Clothes" class="navbar__link">Clothes</a></li>
+                            <li class="navbar__item"><a href="#Emotions" class="navbar__link">Emotions</a></li>
                         </ul>
                     </nav>
                     
