--- a/english-for-kids/index.html
+++ b/english-for-kids/index.html
@@ -54,10 +54,6 @@
         </main>
         <input class="button-start" type="button" value="Start Game">
         
-        <!-- <div class="final-section">
-            <p class="final-section__title">You have 2 errors</p>
-            <img class="success-img" src="./assets/img/success.jpg" alt="">
-        </div> -->
     
 
         <!-- CONTAINERS FOR CARDS AND CATAGORIES
@@ -90,6 +86,13 @@
                     <p class="card__back__title">собака</p>
                 </div>
             </div>          -->
+
+
+            <!-- EXAMPLE OF FINAL RESULT SMILE WITH TITLE -->
+            <!-- <div class="final-section">
+            <p class="final-section__title">You have 2 errors</p>
+            <img class="success-img" src="./assets/img/success.jpg" alt="">
+            </div> -->
 
 
     </div>
